--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -409,12 +409,12 @@
             
         {% if objuser %}        
             <div class="row justify-content-md-start my-4 ms-3">
-                <div class="col-auto mb-2">
+                <div class="col-auto mb-2 btn_cadastrar_venda">
                     <a type="button" class="btn btn-lg btn-gradient-primary shadow-sm d-flex align-items-center px-4 py-2" href="{% url 'cadastrar_venda' %}" style="font-size: 1.1rem;">
                         <i class="bi bi-cart-plus me-2"></i> Cadastrar Venda
                     </a>
                 </div>
-                <div class="col-auto mb-2">
+                <div class="col-auto mb-2 btn_cadastrar_venda_a_prazo">
                     <a type="button" class="btn btn-lg btn-gradient-danger shadow-sm d-flex align-items-center px-4 py-2" href="{% url 'nova_venda_fiado' %}" style="font-size: 1.1rem;">
                         <i class="bi bi-cash-coin me-2"></i> Cadastrar Venda a Prazo
                     </a>
