:sparkles: Iniciando melhorias na funcionalidade de agenda

--- a/templates/agenda/editar.html
+++ b/templates/agenda/editar.html
@@ -2,6 +2,15 @@
 {% load static bootstrap form_tags %}
 {% block conteudo %} 
 
+    <style>
+        .btn_cadastrar_venda_a_prazo{
+            display: none;
+        }
+        .btn_cadastrar_venda{
+            display: none;
+        }
+    </style>
+
     <div class="container mt-5">
         <h2>Editar Evento</h2>
         <form method="POST" enctype="multipart/form-data">
