--- a/templates/agenda/listar.html
+++ b/templates/agenda/listar.html
@@ -2,6 +2,15 @@
 {% load static bootstrap %}
 {% block conteudo %} 
 
+    <style>
+        .btn_cadastrar_venda_a_prazo{
+            display: none;
+        }
+        .btn_cadastrar_venda{
+            display: none;
+        }
+    </style>
+
     <div class="text-center mb-4">
         <h2 class="fw-bold"><i class="bi bi-calendar-event text-primary"></i> Listagem de Eventos</h2>
         <p class="lead">Acompanhe todos os eventos cadastrados na agenda, visualize detalhes e mantenha sua rotina organizada.</p>
