--- a/templates/agenda/cadastrar.html
+++ b/templates/agenda/cadastrar.html
@@ -2,6 +2,15 @@
 {% load static bootstrap form_tags %}
 {% block conteudo %} 
 
+    <style>
+        .btn_cadastrar_venda_a_prazo{
+            display: none;
+        }
+        .btn_cadastrar_venda{
+            display: none;
+        }
+    </style>
+
     <div class="text-center mb-4">
         <h2 class="fw-bold"><i class="bi bi-calendar-plus text-primary"></i> Cadastrar Evento</h2>
         <p class="lead">Cadastre novos eventos na agenda para não perder compromissos importantes e manter o controle das suas atividades.</p>
@@ -26,6 +35,12 @@
                 locale: 'pt-br'
             });  
             $('#id_data_fim').datepicker({
+                format: 'dd/mm/yyyy',
+                autoclose: true,
+                todayHighlight: true,
+                locale: 'pt-br'
+            });
+            $('#id_data_fim_recorrencia').datepicker({
                 format: 'dd/mm/yyyy',
                 autoclose: true,
                 todayHighlight: true,
