--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -236,7 +236,7 @@
                                     <a class="nav-link" href="{% url 'relatorios_home' %}"><i class="bi bi-bar-chart-line"></i> Relatórios</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'relatorios_home' %}"><i class="bi bi-calendar3"></i> Agenda</a>
+                                    <a class="nav-link" href="{% url 'agenda' %}"><i class="bi bi-calendar3"></i> Agenda</a>
                                 </li>
                             {% endif %}
                         {% endif %}
